add database_url env to lint github action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ permissions:
 
 jobs:
   lint:
+    env:
+      DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
     name: ⬣ Lint
     runs-on: ubuntu-latest
     steps:
