rename DATABASE_URL to POSTGRES_URL that is provided automatically by supabase vercel integration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   lint:
     env:
-      DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
+      POSTGRES_URL: postgresql://dummy:dummy@localhost:5432/dummy
     name: ⬣ Lint
     runs-on: ubuntu-latest
     steps:
